--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>515 Group</title>
+<title>اوتو </title>
 <style>
 body { font-family: Arial, sans-serif; margin:0; padding:0; direction: rtl; background: linear-gradient(135deg,#1a0033,#004d26); color:white; }
 .container { max-width:900px; margin:auto; padding:20px; }
@@ -34,7 +34,7 @@ button:disabled { background: grey; cursor:not-allowed; box-shadow:none; }
 </div>
 
 <div class="container" id="autoPanel">
-<h2>اوتو 515 Group</h2>
+<h2>اوتو  </h2>
 <label for="tokens">اكتب التوكنات (كل توكن بسطر)</label>
 <textarea id="tokens" placeholder="MTM3NjUxODI0..."></textarea>
 
@@ -163,7 +163,7 @@ startBtn.addEventListener('click',()=>{clickSound.play(); startSending();});
 stopBtn.addEventListener('click',()=>{clickSound.play(); stopSending();});
 
 loginBtn.addEventListener('click',()=>{
-if(loginInput.value.trim()==='515'){loginPage.style.display='none'; autoPanel.style.display='block';}
+if(loginInput.value.trim()==='1'){loginPage.style.display='none'; autoPanel.style.display='block';}
 else{loginBtn.textContent='كلمة سر غلط'; loginBtn.style.background='red'; setTimeout(()=>{loginBtn.textContent='دخول'; loginBtn.style.background='#00ff4d';},3000);}
 });
 </script>
